--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -5,7 +5,7 @@
 html,
 body,
 #app {
-  min-height: 100%;
+  height: 100%;
 }
 
 .btn-md {
